Fix disk write issue, API names and wrong license
:Release Notes:
- Fixed the disk write issue incase of device halt state.
- Fixed the wrong API names
- Fixed the wrong license fields.

:Detailed Notes:

:Testing Performed:
- Built IPK and verified

:Issues Addressed:
[PLAT-73429] Toast Pop up Doesn't Appear After Rebooting
             the Target Device RPI
[PLAT-73419] Not able to Close Workflow Designer after
             package wizard Installation process
[PLAT-73362] Custom Nodes - Test data returns false with
             the error text "Caller doesn't have permission
             for this API
[PLAT-73346] Not able to install the app/flow
[PLAT-73290] Sometimes all flows are not displaying
[PLAT-73515] In the flow installation successful message
             of package wizard, the successful word
             is misspelt.
[PLAT-73365] Update incorrect API names in CIM service
[PLAT-73515] Notifications should handle Google default
             supported TTS response

Change-Id: I1183a9e80fc9c95e16de6aa09dd103cd0b3b2cb1
Reviewed-on: http://gpro.lgsvl.com/229756
Reviewed-by: OSE Helper Bot <ose@ci.lgsvl.net>
Tested-by: Tirthadeep Roy <tirthadeep.roy@lge.com>
Reviewed-by: Deepthi John <deepthi.john@lge.com>
Tested-by: Deepthi John <deepthi.john@lge.com>
Reviewed-by: Tirthadeep Roy <tirthadeep.roy@lge.com>

--- a/files/sysbus/com.webos.service.contextintentmgr.role.json.in
+++ b/files/sysbus/com.webos.service.contextintentmgr.role.json.in
@@ -1,6 +1,6 @@
 {
-    "appId": "com.webos.service.contextintentmgrd",
-    "allowedNames": ["com.webos.service.contextintentmgrd"],
+    "appId": "com.webos.service.contextintentmgr",
+    "allowedNames": ["com.webos.service.contextintentmgr"],
     "type": "regular",
     "permissions": [
         {
