--- a/files/systemd/services/contextintentmgr.service
+++ b/files/systemd/services/contextintentmgr.service
@@ -1,19 +1,31 @@
-# @@@LICENSE
-#
 # Copyright (c) 2019 LG Electronics, Inc.
-#
-# LICENSE@@@
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+
+# http://www.apache.org/licenses/LICENSE-2.0
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# SPDX-License-Identifier: Apache-2.0
+
+# A service which enables apps to execute flow based rules in node-red runtime
 
 [Unit]
 Description=webos - "%n"
-Requires=pulseaudio.service default-webos.target
-After=pulseaudio.service default-webos.target
+Requires=default-webos.target
+After=default-webos.target
 
 [Service]
 Type=simple
 OOMScoreAdjust=1000
 ExecStartPre=/etc/systemd/system/scripts/contextintentmgr.sh
-ExecStart=/usr/bin/run-js-service -k -g -l nobody -w -n /usr/palm/services/com.webos.service.contextintentmgr
+ExecStart=/usr/bin/run-js-service -k -g -l nobody -n /usr/palm/services/com.webos.service.contextintentmgr
 Restart=on-failure
 
 [Install]
