ACG upgrade for com.webos.service.contextintentmgr
:Release Notes:
ACG upgrade for com.webos.service.contextintentmgr

:Detailed Notes:
- Updated permissions as per new ACG upgrade

:Testing Performed:
Test cases - QWA-1315,QWA-1314

:QA Notes:
N/A

:Issues Addressed:
[PLAT-129792] : ACG Review for com.webos.service.contextintentmgr

Change-Id: I9dad992a25af5bcf6b26eb8595768d3c1beb85b6

--- a/files/sysbus/com.webos.service.contextintentmgr.role.json.in
+++ b/files/sysbus/com.webos.service.contextintentmgr.role.json.in
@@ -2,6 +2,7 @@
     "appId": "com.webos.service.contextintentmgr",
     "allowedNames": ["com.webos.service.contextintentmgr"],
     "type": "regular",
+    "trustLevel": "oem",
     "permissions": [
         {
             "outbound": ["*"],
