a quick fix for static analysis
:Release Notes:
- Fix for Static Analysis Issue for CIM in OSE

:Detailed Notes:
- As per JSHint suggestions made some standard changes
- CID Addressed 174456.191944,206051,213542,
- 8984139 to 8984812 related to contextintentmgr

:Testing Performed:
Locally Tested.
Test Cases: QWA-1314,QWA-1307,QWA-1311

:QA Notes:
NA

:Issues Addressed:
[PLAT-130486] Analysis & Fix for Static Analysis Issue for CIM in OSE

Change-Id: I5c1e01bba4570b5f700664c8d9b2a88e169277ad

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "node-red",
         "node-red CIM"
     ],
+    "jshintConfig": {
+        "esversion": 6
+    },
     "author": "LG Electronics",
     "license": "Apache-2.0",
     "dependencies": {
